# csv-to-kafka-using-cpp

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  make-me
benchmark/generate/src/: genapp  generate.cpp
cmake/: print_all_variables.cmake
configs/: SPO_2_kafka.yaml
data/locations/: LOCATION_organized_crime_familiy.csv
data/spo/: SPO_organized_crime_family.csv_done
data/test_data/: mobility_short_2.csv
data/test_data/spo/: SPO_crime_records.csv  SPO_organized_crime_family_affiliations.csv  SPO_selectors.csv
src/: AbstractPoller.h  AbstractProcessor.cpp  AbstractProcessor.h  AbstractWorker.cpp  AbstractWorker.h  CMakeLists.txt  Connector.cpp  Connector.h  PollerBridge.h  ProcessorBridge.cpp  ProcessorBridge.h  ResultContainer.h  ThreadGuard.h  main.cpp
src/config/: ConfigParser.cpp  ConfigParser.h  SchemaConfig.h
src/csv/: CSVIterator.cpp  CSVIterator.h  CSVRange.cpp  CSVRange.h  CSVRow.cpp  CSVRow.h
src/impl/: CsvProcessor.cpp  CsvProcessor.h  CsvProcessorBuilder.cpp  CsvProcessorBuilder.h  DirectoryPoller.cpp  DirectoryPoller.h  DirectoryPollerBuilder.h  DirectoryPollerMacOS.cpp  DirectoryPollerMacOS.h  KafkaDeliveryReportCb.cpp  KafkaDeliveryReportCb.h  KafkaPoller.cpp  KafkaPoller.h  PollResult.cpp  PollResult.h  SchemaRegistry.cpp  SchemaRegistry.h  Util.cpp  Util.h
src/logging/: LogProcessor.cpp  Logging.h
src/transformers/: AbstractTransformer.cpp  AbstractTransformer.h  BaseTransformer.cpp  BaseTransformer.h  Decorator.cpp  Decorator.h  DecoratorAppend.cpp  DecoratorAppend.h  DecoratorMap.cpp  DecoratorMap.h  DecoratorPrepend.cpp  DecoratorPrepend.h  DecoratorSet.cpp  DecoratorSet.h  DecoratorUnuuid.cpp  DecoratorUnuuid.h  Factory.cpp  Factory.h
tests/: CMakeLists.txt
